@@ -1,5 +1,10 @@
 2008-08-18  Sven Neumann  <sven@gimp.org>
 
+	* plug-ins/common/file-compressor.c: pass some error message with
+	the return values instead of calling g_message().
+
+2008-08-18  Sven Neumann  <sven@gimp.org>
+
 	* plug-ins/common/file-gbr.c
 	* plug-ins/common/file-gih.c
 	* plug-ins/common/file-pat.c
